# tarantula

./: .flake8  .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  entrypoint.py  lint_and_test.sh  log.ini  poetry_update.sh  pyproject.toml  requirements.txt  run.sh  start.sh  tarantula.conf  tarantula.service  web.py
scripts/: format.sh  lint_and_test.sh  poetry_update.sh  static_lint.sh
src/: __init__.py  app.py  config.py  constants.py  devices.py  entrypoint.py  models.py
static/scripts/: goal.js  plugs.js  remote.js  switches.js
static/styles/: goal.css  plugs.css  remote.css  routines.css  switches.css
templates/: favicon.html.jinja  goal.html  plugs.html  plugs.html.jinja  remote.html  remote.html.jinja  root.html  root.html.jinja  routines.html.jinja  switches.html
