[tool.poetry]
name = "tarantula"
version = "2.0.0"
description = "web server for home projects"
readme = "README.md"
authors = [
    "Paul Dumoulin <paul.l.dumoulin@gmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.13.0"
pyblinky = "^4.1.0"
broadlink = "^0.19.0"
fastapi = {extras = ["all"], version = "^0.115.5"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
flake8 = "^5.0.4"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
flake8-import-single = "^0.1.5"
flake8-quotes = "^3.3.1"
yamllint = "^1.35.1"

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "broadlink"
]
ignore_missing_imports = true
