[tool.poetry]
name = "tarantula"
version = "2.0.2"
description = "web server for home projects"
readme = "README.md"
authors = [
    "Paul Dumoulin <paul.l.dumoulin@gmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.13.0"
pyblinky = "^4.1.0"
broadlink = "^0.19.0"
fastapi = {extras = ["all"], version = "^0.121.0"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.11.1"
yamllint = "^1.35.1"

[lint.isort]
multi_line_output=3

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "broadlink"
]
ignore_missing_imports = true
